refactor: improve extension functionality and UI
This commit refactors the extension to improve its
functionality and user interface.  The changes include:

- Updating the extension description and UI elements
  for better clarity.
- Improving the filtering mechanism for more
  efficient topic management.
- Enhancing the settings panel with a more intuitive
  design and improved functionality.
- Adding support for environment variables to
  configure the server port.
- Improving the code structure and organization for
  better maintainability.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,7 +4,7 @@
         "description": "The name of the extension"
     },
     "extension_description": {
-        "message": "Quick search and topic filtering extension for Ekşi Sözlük",
+        "message": "Advanced tracking and filtering extension for Ekşi Sözlük",
         "description": "The description of the extension"
     },
     "context_menu_search": {
@@ -16,7 +16,7 @@
         "description": "Title of the settings panel"
     },
     "filter_words_label": {
-        "message": "Filter Words",
+        "message": "Blocked Words",
         "description": "Label for filter words input"
     },
     "theme_label": {
@@ -32,7 +32,7 @@
         "description": "Light theme option"
     },
     "filter_input_placeholder": {
-        "message": "add word...",
+        "message": "Enter a word...",
         "description": "Placeholder text for filter input"
     },
     "save_button": {
